--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -101,7 +101,6 @@
         margin: 22px 0 0 0
       &__button
         top: 53%
-        transform: translateY(-56%)
         &--prev
           left: 0
         &--next
